wp_derive_request_builder/tests/fail/missing_sparse_field_attr.stderr
error: Missing #[SparseField(_field_type_)]
 --> tests/fail/missing_sparse_field_attr.rs:2:1
  |
2 | enum UsersRequest {
  | ^^^^
